--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = {version = "0.4.38", features = ["serde"]}
+chrono-tz = "0.10.0"
+serde = {version = "1.0.210", features = ["derive"]}
+serde_json = "1.0.132"
