--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ chrono = {version = "0.4.38", features = ["serde"]}
 chrono-tz = "0.10.0"
 serde = {version = "1.0.210", features = ["derive"]}
 serde_json = "1.0.132"
+reqwest = { version = "0.11", features = ["json", "multipart"]}
+tokio = { version = "1", features = ["full"]}
