--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serde = {version = "1.0.210", features = ["derive"]}
 serde_json = "1.0.132"
 reqwest = { version = "0.11", features = ["json", "multipart"]}
 tokio = { version = "1", features = ["full"]}
+dotenv = "0.15.0"
