--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ serde_json = "1.0.132"
 reqwest = { version = "0.11", features = ["json", "multipart"]}
 tokio = { version = "1", features = ["full"]}
 dotenv = "0.15.0"
+csv = "0.15.0"
+json = "0.11.13"
+getopts = "0.2.15"
